Support from call and chat added and search feature done

--- a/MyVagon/Storyboard/Home.storyboard
+++ b/MyVagon/Storyboard/Home.storyboard
@@ -1462,7 +1462,7 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="305" height="54"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="License" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJN-nd-Zz9" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="24"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="305" height="16.5"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -1477,7 +1477,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Upload vehicle paperwork &amp; EU Registration Document)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ki3-TJ-dm5" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                                                                <rect key="frame" x="0.0" y="29" width="305" height="25"/>
+                                                                                <rect key="frame" x="0.0" y="21.5" width="305" height="32.5"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -3176,7 +3176,7 @@
                                                                         </userDefinedRuntimeAttribute>
                                                                     </userDefinedRuntimeAttributes>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert: Can you please upload the POD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rtv-ik-fcw" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Robert: Can you please upload the POD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rtv-ik-fcw" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
                                                                     <rect key="frame" x="5" y="36.5" width="357" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
@@ -3194,8 +3194,8 @@
                                                                     <rect key="frame" x="367" y="35.5" width="22" height="22"/>
                                                                     <color key="backgroundColor" red="0.60784313725490191" green="0.31764705882352939" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" secondItem="g0R-XN-U6o" secondAttribute="height" id="acu-s3-Bgy"/>
-                                                                        <constraint firstAttribute="width" constant="22" id="zYR-Ja-r3A"/>
+                                                                        <constraint firstAttribute="height" constant="22" id="KvL-QP-7df"/>
+                                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" secondItem="g0R-XN-U6o" secondAttribute="height" multiplier="1:1" id="mYG-pu-b9r"/>
                                                                     </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
@@ -3216,6 +3216,7 @@
                                                                 <constraint firstAttribute="trailing" secondItem="eaQ-XN-gGu" secondAttribute="trailing" constant="5" id="3qS-c7-QgJ"/>
                                                                 <constraint firstItem="Rtv-ik-fcw" firstAttribute="leading" secondItem="4GW-t7-3OC" secondAttribute="leading" id="4Jt-rG-vUA"/>
                                                                 <constraint firstItem="Rtv-ik-fcw" firstAttribute="centerY" secondItem="g0R-XN-U6o" secondAttribute="centerY" id="ESt-Pg-AcO"/>
+                                                                <constraint firstItem="Rtv-ik-fcw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4GW-t7-3OC" secondAttribute="bottom" constant="5" id="IS1-dw-wFD"/>
                                                                 <constraint firstItem="4GW-t7-3OC" firstAttribute="centerY" secondItem="eaQ-XN-gGu" secondAttribute="centerY" id="LGA-BT-ApX"/>
                                                                 <constraint firstItem="4GW-t7-3OC" firstAttribute="leading" secondItem="94I-Ki-d5p" secondAttribute="leading" constant="5" id="UtH-hR-Z62"/>
                                                                 <constraint firstItem="eaQ-XN-gGu" firstAttribute="leading" secondItem="4GW-t7-3OC" secondAttribute="trailing" constant="5" id="dY9-Cs-lBR"/>
