Setting Screen Updates

--- a/MyVagon/Storyboard/Settings.storyboard
+++ b/MyVagon/Storyboard/Settings.storyboard
@@ -927,6 +927,81 @@
             </objects>
             <point key="canvasLocation" x="5352" y="73"/>
         </scene>
+        <!--About UsVC-->
+        <scene sceneID="Rb9-xG-u7s">
+            <objects>
+                <viewController storyboardIdentifier="AboutUsVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="iOr-Ed-ciH" customClass="AboutUsVC" customModule="MyVagon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MZd-Iv-ZRd">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P0N-yy-yAI">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eIc-GD-elc">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XoD-1J-zWz">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="450"/>
+                                                <subviews>
+                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="xTo-5b-hDj">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="450"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="450" id="jIX-j4-8xe"/>
+                                                        </constraints>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="iOr-Ed-ciH" id="EYh-aQ-G6S"/>
+                                                            <outlet property="delegate" destination="iOr-Ed-ciH" id="igh-Y5-oaE"/>
+                                                        </connections>
+                                                    </tableView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="xTo-5b-hDj" firstAttribute="leading" secondItem="XoD-1J-zWz" secondAttribute="leading" id="4OU-OX-G6b"/>
+                                                    <constraint firstItem="xTo-5b-hDj" firstAttribute="top" secondItem="XoD-1J-zWz" secondAttribute="top" id="H9P-4G-iTw"/>
+                                                    <constraint firstAttribute="trailing" secondItem="xTo-5b-hDj" secondAttribute="trailing" id="Y77-hW-jKZ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="xTo-5b-hDj" secondAttribute="bottom" id="c7c-VB-3lz"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="XoD-1J-zWz" secondAttribute="bottom" id="18l-SF-BiY"/>
+                                            <constraint firstItem="XoD-1J-zWz" firstAttribute="centerX" secondItem="eIc-GD-elc" secondAttribute="centerX" id="6V1-qM-kjA"/>
+                                            <constraint firstAttribute="trailing" secondItem="XoD-1J-zWz" secondAttribute="trailing" id="F4b-2n-dlZ"/>
+                                            <constraint firstItem="XoD-1J-zWz" firstAttribute="leading" secondItem="eIc-GD-elc" secondAttribute="leading" id="UQ9-JQ-3Q5"/>
+                                            <constraint firstItem="XoD-1J-zWz" firstAttribute="top" secondItem="eIc-GD-elc" secondAttribute="top" id="s3s-ef-Tsa"/>
+                                        </constraints>
+                                    </scrollView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="eIc-GD-elc" firstAttribute="leading" secondItem="P0N-yy-yAI" secondAttribute="leading" id="OXq-Hh-yE8"/>
+                                    <constraint firstAttribute="trailing" secondItem="eIc-GD-elc" secondAttribute="trailing" id="PXe-Hy-ZqO"/>
+                                    <constraint firstItem="eIc-GD-elc" firstAttribute="top" secondItem="P0N-yy-yAI" secondAttribute="top" id="bwD-H7-em5"/>
+                                    <constraint firstAttribute="bottom" secondItem="eIc-GD-elc" secondAttribute="bottom" id="kup-G2-F4Q"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="U2d-WI-Q0G"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="P0N-yy-yAI" firstAttribute="top" secondItem="U2d-WI-Q0G" secondAttribute="top" id="Ac9-Xi-ndZ"/>
+                            <constraint firstItem="P0N-yy-yAI" firstAttribute="bottom" secondItem="U2d-WI-Q0G" secondAttribute="bottom" id="cWU-aY-rSW"/>
+                            <constraint firstItem="P0N-yy-yAI" firstAttribute="trailing" secondItem="U2d-WI-Q0G" secondAttribute="trailing" id="orP-yJ-vaw"/>
+                            <constraint firstItem="P0N-yy-yAI" firstAttribute="leading" secondItem="U2d-WI-Q0G" secondAttribute="leading" id="xsd-AQ-ItS"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="rGz-xj-tXj"/>
+                    <connections>
+                        <outlet property="tblData" destination="xTo-5b-hDj" id="edY-Ie-HHF"/>
+                        <outlet property="tblDataHeight" destination="jIX-j4-8xe" id="6bm-Hi-tfh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sZx-fu-ZZr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6006" y="73"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="1lo-De-Wiv">
